--- a/templates/file/base.html
+++ b/templates/file/base.html
@@ -11,17 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="manifest" href="site.webmanifest"> -->
     <!-- CSS here -->
-    <link rel="stylesheet" href="{% static 'edu_css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'edu_css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'edu_css/magnific-popup.css' %}">
-    <link rel="stylesheet" href="{% static 'edu_css/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'edu_css/themify-icons.css' %}">
-    <link rel="stylesheet" href="{% static 'edu_css/nice-select.css' %}">
-    <link rel="stylesheet" href="{% static 'edu_css/flaticon.css' %}">
-    <link rel="stylesheet" href="{% static 'edu_css/gijgo.css' %}">
-    <link rel="stylesheet" href="{% static 'edu_css/animate.css' %}">
-    <link rel="stylesheet" href="{% static 'edu_css/slicknav.css' %}">
-    <link rel="stylesheet" href="{% static 'edu_css/style.css' %}">
+   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+   <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 <body>
