--- a/templates/file/profile.html
+++ b/templates/file/profile.html
@@ -79,7 +79,7 @@
 
         <!-- bradcam_area_start -->
         <div class="bradcam_area breadcam_bg overlay2">
-            <h3>Edumark User Profile</h3>
+            <h3>Patrix User Profile</h3>
         </div>
         <!-- bradcam_area_end -->
 
